--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mask Application</title>
-</head>
-<body style="background: #121212; color: #00ff00; font-family: Arial, sans-serif;">
-    <h1>Welcome to the Mask Application!</h1>
+
+    <style>
+        .custom-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #000;
+            color: #00FF00;
+            border: 3px solid #FF0000;
+            font-size: 16px;
+            font-family: Arial, sans-serif;
+            text-transform: uppercase;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .custom-button:hover {
+            transform: scale(1.1);
+            background-color: #fff000;
+            box-shadow: 0 0 10px #FF0000, 0 0 20px #00FF00;
+        }
+    </style>
+    </head>
+    <body style="background: #121212; color: #00ff00; font-family: Arial, sans-serif;">
+    <a href="https://replit.com/github/tucommenceapousser/maskme" class="custom-button">Clone on Replit</a>
+    <h1>Welcome to the Mask Application apply by TRHACKNON!</h1>
     <p>Upload your photo below, and we'll add a mask to your face automatically. Make sure your face is clearly visible in the photo for the best results.</p>
     <form method="POST" enctype="multipart/form-data">
         {{ form.csrf_token }}
